[transactions] Misaligned search button fix (#1750)

--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -442,7 +442,6 @@
   background-color: transparent;
   background-image: @search-icon;
   background-size: 16px 16px;
-  margin-top: 5px;
 }
 
 .path-button:hover {
